Fix attention seeking nav on small sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,10 @@ nav a {
   nav li a:hover {
     background: #444444
   }
+
+  .attention::after {
+    display: none;
+  }
 }
 
 .nav-wrapper {
